--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
     <%= render :partial => 'share/header'%>
   </header>
 
+# move slider to specific page
   <section>
       <%= yield%>
   </section>
