--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag '/assets/js/jquery.js', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag '/assets/js/jquerybootstrap.min.js', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag '/assets/js/bootstrap.min.js', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag '/assets/js/jquery-ui.js', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag '/assets/js/js.js', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag '/assets/js/jPages.js', 'data-turbolinks-track': 'reload' %>
