--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,6 @@
     <title>Eshopper</title>
     <%= csrf_meta_tags %>
 
-    # <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag '/assets/css/bootstrap.min.css', media: 'all'%>
     <%= stylesheet_link_tag '/assets/css/prettyPhoto.css', media: 'all'%>
     <%= stylesheet_link_tag '/assets/css/price-range.css', media: 'all'%>
@@ -39,7 +38,7 @@
     <%= render :partial => 'share/header'%>
   </header>
 
-# move slider to specific page
+<!--move slider to specific page-->
   <section>
       <%= yield%>
   </section>
