--- a/app/views/share/_sidebar.html.erb
+++ b/app/views/share/_sidebar.html.erb
@@ -1,89 +1,87 @@
 <div class="left-sidebar">
-                            <h2>Category</h2>
-                            <div class="panel-group category-products" id="accordian"><!--category-productsr-->
-                            @foreach($data['cats'] as $cat)
-                                <div class="panel panel-default">
-                                    <div class="panel-heading">
-                                        <h4 class="panel-title">
-                                            <a data-toggle="collapse" data-parent="#accordian" href="#{{$cat-&gt;name}}">
-                                             {{-- cat-name --}}
-                                                {{$cat-&gt;name}}
-                                                <!--
-                                                <?php
-                                                    //if(count($cat->sub_cat) < 0){
-                                                        $css = `<script>
-                                                                $("#`. $cat->name .`").css("display:none;");
-                                                                $(".fa fa-plus").css("display:none;");
-                                                               </script>`;
-                                                      //  echo $css;
-                                                               //print_r($css);
-                                                               //var_dump("css");
-                                                    //}
+    <h2>Category</h2>
+    <div class="panel-group category-products" id="accordian"><!--category-productsr-->
+        @foreach($data['cats'] as $cat)
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordian" href="#{{$cat-&gt;name}}">
+                            {{-- cat-name --}}
+                            {{$cat-&gt;name}}
+                            <!--
+                            <?php
+                                //if(count($cat->sub_cat) < 0){
+                                    $css = `<script>
+                                            $("#`. $cat->name .`").css("display:none;");
+                                            $(".fa fa-plus").css("display:none;");
+                                            </script>`;
+                                    //  echo $css;
+                                            //print_r($css);
+                                            //var_dump("css");
+                                //}
 
-                                                    if(count($cat->sub_cat) < 0):
-                                                    print_r("test");
-                                                ?>
-                                                    <script>
-                                                        $("#{{$cat->name}}").css('display','none');
-                                                        $(".fa fa-plus").css('display','none');
-                                                    </script>
-                                                <?php endif;?>
-                                                -->
-                                                <span class="badge pull-right"><i class="fa fa-plus"></i></span>
-                                            </a>
-                                        </h4>
-                                    </div>
-                                    <div id="{{$cat->name}}" class="panel-collapse collapse">
-                                        <div class="panel-body">
-                                            <ul>
-                                            {{-- cat-sub --}}
-                                            <!--?php
-                                                if(count($cat--->sub_cat) &gt; 0){
-                                                    $subs = $cat-&gt;sub_cat;
-                                                    //issue array
-                                                    if(is_array($subs)){
-                                                    //print_r($subs[0]['name']);
-                                                        for($i = 0;$i &lt; count($cat-&gt;sub_cat); $i++){
-                                                            echo '<li><a data-parent="#accordian" href="#prods">'.$subs[$i]['name'].'</a></li>';
-                                                        }
-                                                    }
-                                                }
-                                            ?&gt;
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            @endforeach
-                            </div><!--/category-products-->
+                                if(count($cat->sub_cat) < 0):
+                                print_r("test");
+                            ?>
+                                <script>
+                                    $("#{{$cat->name}}").css('display','none');
+                                    $(".fa fa-plus").css('display','none');
+                                </script>
+                            <?php endif;?>
+                            -->
+                            <span class="badge pull-right"><i class="fa fa-plus"></i></span>
+                        </a>
+                    </h4>
+                </div>
+                <div id="{{$cat->name}}" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        <ul>
+                        {{-- cat-sub --}}
+                        <!--?php
+                            if(count($cat--->sub_cat) &gt; 0){
+                                $subs = $cat-&gt;sub_cat;
+                                //issue array
+                                if(is_array($subs)){
+                                //print_r($subs[0]['name']);
+                                    for($i = 0;$i &lt; count($cat-&gt;sub_cat); $i++){
+                                        echo '<li><a data-parent="#accordian" href="#prods">'.$subs[$i]['name'].'</a></li>';
+                                    }
+                                }
+                            }
+                        ?&gt;
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        @endforeach
+        </div>
+        <!--categoryproducts-->
 
-                            <div class="brands_products"><!--brands_products-->
-                                <h2>Brands</h2>
-                                <div class="brands-name">
-                                    <ul class="nav nav-pills nav-stacked">
-                                    @foreach($data['brands'] as $brand)
-                                        <li><a href="#prods"> <span class="pull-right">{{$brand-&gt;qTy}}</span>{{$brand-&gt;name}}</a></li>
-                                    @endforeach
-                                    </ul>
-                                </div>
-                            </div><!--/brands_products-->
+        <!--brands_products-->
+        <div class="brands_products">
+            <h2>Brands</h2>
+            <div class="brands-name">
+                <ul class="nav nav-pills nav-stacked">
+                @foreach($data['brands'] as $brand)
+                    <li><a href="#prods"> <span class="pull-right">{{$brand-&gt;qTy}}</span>{{$brand-&gt;name}}</a></li>
+                @endforeach
+                </ul>
+            </div>
+        </div>
+        <!--/brands_products-->
 
-                             <div class="price-range"><!--price-range-->
+        <!--price-range-->
+        <div class="price-range">
+            <h2>Price Range</h2>
+            <div class="well text-center">
+                <div class="slider slider-horizontal" style="width: 110px;"><div class="slider-track"><div class="slider-selection" style="left: 40%; width: 1.66667%;"></div><div class="slider-handle round left-round" style="left: 40%;"></div><div class="slider-handle round" style="left: 41.6667%;"></div></div><div class="tooltip top in" style="top: -30px; left: 11.9167px;"><div class="tooltip-arrow"></div><div class="tooltip-inner">250 : 315</div></div><input type="text" class="span2" value="" data-slider-min="0" data-slider-max="600" data-slider-step="5" data-slider-value="[250,450]" id="sl2"></div><br>
+                <b class="pull-left">$ 0</b> <b class="pull-right">$ 600</b>
+            </div>
+        </div>
+        <!--/price-range-->
 
-                                <div class="well">
-                                   <h2>Price Range</h2>
-                                    <div id="slider-range"></div>
-                                    <br>
-                                    <b class="pull-left">$
-                                        <input size="2" type="text" id="amount_start" name="start_price" value="15" style="border:0px; font-weight: bold; color:green" readonly="readonly"></b>
+        <div class="shipping text-center"><!--shipping-->
+            <img src="images/home/shipping.jpg" alt="">
+        </div><!--/shipping-->
 
-                                    <b class="pull-right">$
-                                        <input size="2" type="text" id="amount_end" name="end_price" value="65" style="border:0px; font-weight: bold; color:green" readonly="readonly"></b>
-                                   </div>
-
-                            </div><!--/price-range-->
-
-                            <div class="shipping text-center"><!--shipping-->
-                                <img src="{{asset('theme/images/home/shipping.jpg')}}" alt="">
-                            </div><!--/shipping-->
-
-                        </div>
+</div>
