--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -107,7 +107,7 @@
                     <div class="col-sm-5">
                         <div class="ui-widget search_box pull-right">
                             <input id="tags" type="text" placeholder="Search" class="ui-autocomplete-input" autocomplete="off">
-							<i class="glyphicon glyphicon-search" style="margin-top: 10px"></i>
+							<i class="fa fa-search" style="margin-top: 10px"></i>
                         </div>
                     </div>
                 </div>
