update header -social icon,search btn

--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -109,8 +109,9 @@
                     </div>
                     <div class="col-sm-5">
                         <div class="ui-widget search_box pull-right">
-                            <input id="tags" type="text" placeholder="Search" class="ui-autocomplete-input" autocomplete="off">
-							<i class="fa fa-search" style="margin-top: 10px"></i>
+                            <input id="tags" type="text" placeholder="Search" class="ui-autocomplete-input" autocomplete="off"
+                            style="font-size: 12px;">
+							<i class="fa fa-search" style="margin-top: 10px;font-size: 12px; "></i>
                         </div>
                     </div>
                 </div>
