--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -73,6 +73,10 @@ a#scrollUp i {
 *******Header CSS******
 **************************/
 
+.fa-facebook:before,.fa-twitter:before ,.fa-linkedin:before, .fa-google-plus:before,.fa-dribbble:before
+ {
+    font-size: 13px;
+}
 .header_top {
     background: none repeat scroll 0 0 #F0F0E9;
 }
@@ -2124,6 +2128,7 @@ textarea {
     margin-bottom: 10px;
     margin-top: 35px;
     color: #696763;
+     font-size: 14px;
 }
 
 #cart_items .cart_info .table.table-condensed.total-result tr {
