--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,19 +3,13 @@
   <head>
     <title>EasyShop (Admin) </title>
     <meta charset="utf-8">
-    <link href="{{asset('admin_theme/css/bootstrap.min.css')}}" rel="stylesheet">
-    <!-- bootstrap theme -->
-    <link href="{{asset('admin_theme/css/bootstrap-theme.css')}}" rel="stylesheet">
-    <!--external css-->
-    <!-- font icon -->
-    <link href="{{asset('admin_theme/css/elegant-icons-style.css')}}" rel="stylesheet" />
-    <link href="{{asset('admin_theme/css/font-awesome.min.css')}}" rel="stylesheet" />
-
-
-  	<link href="{{asset('admin_theme/css/widgets.css')}}" rel="stylesheet">
-      <link href="{{asset('admin_theme/css/style.css')}}" rel="stylesheet">
-      <link href="{{asset('admin_theme/css/style-responsive.css')}}" rel="stylesheet" />
-
+    <%= stylesheet_link_tag '/assets/css/bootstrap.min.css', media: 'all'%>
+    <%= stylesheet_link_tag '/assets/css/bootstrap-theme.css', media: 'all'%>
+    <%= stylesheet_link_tag '/assets/css/elegant-icons-style.css', media: 'all'%>
+    <%= stylesheet_link_tag '/assets/css/font-awesome.min.css', media: 'all'%>
+    <%= stylesheet_link_tag '/assets/css/widgets.css', media: 'all'%>
+    <%= stylesheet_link_tag '/assets/css/style.css', media: 'all'%>
+    <%= stylesheet_link_tag '/assets/css/style-responsive.css', media: 'all'%>
 <style>
 #main-content{min-height: 550px}
 }
@@ -35,21 +29,11 @@
          </div>
 </footer>
 
-      <script src="{{asset('admin_theme/js/jquery.js')}}"></script>
-
-      <!-- bootstrap -->
-      <script src="{{asset('admin_theme/js/bootstrap.min.js')}}"></script>
-
-
-
-  <!-- nice scroll -->
-  <script src="{{asset('admin_theme/js/jquery.scrollTo.min.js')}}"></script>
-  <script src="{{asset('admin_theme/js/jquery.nicescroll.js')}}" type="text/javascript"></script>
-
-
-  <!--custome script for all page-->
-  <script src="{{asset('admin_theme/js/scripts.js')}}"></script>
-
+<%= javascript_include_tag '/assets/js/jquery.js', 'data-turbolinks-track': 'reload' %>
+<%= javascript_include_tag '/assets/js/bootstrap.min.js', 'data-turbolinks-track': 'reload' %>
+<%= javascript_include_tag '/assets/js/jquery.scrollTo.min.js', 'data-turbolinks-track': 'reload' %>
+<%= javascript_include_tag '/assets/js/jquery.nicescroll.js', 'data-turbolinks-track': 'reload' %>
+<%= javascript_include_tag '/assets/js/scripts.js', 'data-turbolinks-track': 'reload' %>
 
   </body>
 </html>
