--- a/app/views/share/_cart_wishlist.html.erb
+++ b/app/views/share/_cart_wishlist.html.erb
@@ -24,7 +24,7 @@
                                 </div>
 
                                 <footer>
-                                    <a href="checkout.html" class="checkout btn"><em>Checkout $<span>0</span></em></a>
+                                    <a class="checkout btn"><em>Checkout $<span>0</span></em></a>
                                 </footer>
                             </div>
                         </div>
