--- a/app/views/auth/index.html.erb
+++ b/app/views/auth/index.html.erb
@@ -3,26 +3,29 @@
 <section id="form"><!--form-->
     <div class="container">
         <div class="row">
+<!--login form-->
             <div class="col-sm-4 col-sm-offset-1">
-                <div class="login-form"><!--login form-->
+                <div class="login-form">
                     <h2>Login to your account</h2>
                     <form action="#">
                         <input id="userName" type="text" placeholder="Name" />
                         <input type="email" placeholder="Email Address" />
                         <span>
-                            <input type="checkbox" class="checkbox"> 
+                            <input type="checkbox" class="checkbox">
                             Keep me signed in
                         </span>
                         <!--<input type="button" class="btn btn-default" id="loginBtn" value="Login" onclick="loginUser()">-->
                         <button class="btn btn-default" onclick="loginUser()">Login</button>
                     </form>
-                </div><!--/login form-->
+                </div>
             </div>
+<!--/login form-->
             <div class="col-sm-1">
                 <h2 class="or">OR</h2>
             </div>
+<!--sign up form-->
             <div class="col-sm-4">
-                <div class="signup-form"><!--sign up form-->
+                <div class="signup-form">
                     <h2>New User Signup!</h2>
                     <form action="#">
                         <input type="text" placeholder="Name"/>
@@ -30,9 +33,10 @@
                         <input type="password" placeholder="Password"/>
                         <button type="submit" class="btn btn-default">Signup</button>
                     </form>
-                        <a href="LoginAdmin.html">Administrator</a>
-                </div><!--/sign up form-->
+                        <!--<a href="LoginAdmin.html">Administrator</a>-->
+                </div>
             </div>
+<!--/sign up form-->
         </div>
     </div>
 </section><!--/form-->
