update admin layout

--- a/app/views/layouts/cust_admin.html.erb
+++ b/app/views/layouts/cust_admin.html.erb
@@ -19,8 +19,11 @@
    <%= render :partial => 'share/admin.header'%>
  
  <!--@include('admin.admin_header')-->
- 
- @yield('content')
+ <%= render :partial => 'share/admin.sidebar'%>
+  <section>
+      <%= yield%>
+  </section>
+
  <footer>
          <div class="container">
 
