--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,43 +1,2 @@
-<section id="container" class="">
-        @include('admin.sidebar')
-        <section id="main-content">
-            <section class="wrapper">
-
-                <div class="content-box-large">
-                    <h1>View Categories</h1>
-
-
-                    <table class="table table-striped">
-                        <thead>  <tr>
-                                <th>Category ID</th>
-                                <th>Category Name</th>
-                                <th>Status</th>
-                                <th>update</th>
-                                <th>Delete</th>
-                            </tr>
-                        </thead>
-                        @foreach($cats as $cat)
-                        <tbody>
-                            <tr>
-                                <td>{{$cat->id}}</td>
-                                <td>{{$cat->name}}</td>
-                                <td>@if($cat->status=='0')
-                                    Enable
-                                    @else
-                                    Disable
-
-                                    @endif</td>
-                                <td><a href="{{url('/')}}/CatEditForm/{{$cat->id}}" class="btn btn-info btn-small">Edit</a></td>
-                                <td><a href="{{url('/deleteCat')}}/{{$cat->id}}" class="btn btn-danger">Remove</a></td>
-                            </tr>
-                        </tbody>
-                        @endforeach
-                    </table>
-
-                </div>
-
-
-
-        </section>
-      </section>
-  </section>
+<h1>Lv::Test#index</h1>
+<p>Find me in app/views/lv/test/index.html.erb</p>
