udpate search layout

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,7 +8,7 @@
             </div>
             <div class="col-sm-9 padding-right">
                 <div id="prods" class="features_items" data-service="{{$data['prods']}}"><!--features_items-->
-                    <h2 class="title text-center">Features Items</h2>
+                    <h2 class="title text-center">Featured Items</h2>
                     <!-- navigation holder -->
                     <div class="holder">
                     </div>
