--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 
                 <!--features_items-->
                     <div id="prods" class="features_items" data-service="{{$data['prods']}}">
-                        <h2 class="title text-center">Features Items</h2>
+                        <h2 class="title text-center">Featured Items</h2>
                         <!-- navigation holder -->
                         <div class="holder">
                         </div>
