--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2702,3 +2702,21 @@ a.jp-disabled:hover {
 .holder span {
     margin: 0 5px;
 }
+
+
+/* cherry addon css */
+
+#grid header
+{
+  height:24px;
+  width:940px;
+  margin:0px;
+  padding:10px;
+  background:#fff;
+  background:#ececec;
+  margin-bottom:10px; 
+}
+
+.search_items {
+    overflow: hidden;
+}
