--- a/app/views/admin/products/_addProp.html.erb
+++ b/app/views/admin/products/_addProp.html.erb
@@ -1,4 +1,4 @@
-@extends('admin.master')
+<!-- @extends('admin.master')
 
 @section('content')
 
@@ -9,14 +9,14 @@ if(isset($id)){
 
   $Products = DB::table('products')->get();
 }
- ?>
+ ?> -->
   <section id="container" class="">
-        @include('admin.sidebar')
+        <!-- @include('admin.sidebar') -->
         <section id="main-content">
             <section class="wrapper">
 
                 <div class="content-box-large">
-  {!! Form::open(['url' => 'admin/sumbitProperty',  'method' => 'post']) !!}
+  <!-- {!! Form::open(['url' => 'admin/sumbitProperty',  'method' => 'post']) !!} -->
                   <div class="panel-heading col-md-8">
                    <div class="panel-title">Add Property
                      <input type="submit" class="btn btn-success pull-right" value="Submit Property" style="margin:-4px"/>
@@ -28,9 +28,9 @@ if(isset($id)){
 
                           <b>Product Name:</b>
                         <select class="form-control" name="pro_id">
-                              @foreach($Products as $product)
+                              <!-- @foreach($Products as $product) -->
                           <option  value="{{$product->id}}">{{$product->pro_name}}</<option>
-                              @endforeach
+                              <!-- @endforeach -->
                           </select><br>
 
                          Size:  <select class="form-control" name="size">
@@ -52,8 +52,8 @@ if(isset($id)){
 
 
                   </div>
-
-                    {!! Form::close() !!}
+<!-- 
+                    {!! Form::close() !!} -->
                 </div>
 
 
