--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,5 +1,5 @@
 <section id="container" class="">
-        @include('admin.sidebar')
+        <!-- @include('admin.sidebar') -->
         <section id="main-content">
             <section class="wrapper">
 
@@ -16,7 +16,7 @@
                                 <th>Delete</th>
                             </tr>
                         </thead>
-                        @foreach($cats as $cat)
+                        <!-- @foreach($cats as $cat) -->
                         <tbody>
                             <tr>
                                 <td>{{$cat->id}}</td>
@@ -31,7 +31,7 @@
                                 <td><a href="{{url('/deleteCat')}}/{{$cat->id}}" class="btn btn-danger">Remove</a></td>
                             </tr>
                         </tbody>
-                        @endforeach
+                        <!-- @endforeach -->
                     </table>
 
                 </div>
