--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,19 +1,19 @@
 
-<?php
+<!-- <?php
 if(isset($id)){
  $Products = DB::table('products')->where('id',$id)->get();
 }else {
 
   $Products = DB::table('products')->get();
 }
- ?>
+ ?> -->
   <section id="container" class="">
-        @include('admin.sidebar')
+        <!-- @include('admin.sidebar') -->
         <section id="main-content">
             <section class="wrapper">
 
                 <div class="content-box-large">
-  {!! Form::open(['url' => 'admin/sumbitProperty',  'method' => 'post']) !!}
+  <!-- {!! Form::open(['url' => 'admin/sumbitProperty',  'method' => 'post']) !!} -->
                   <div class="panel-heading col-md-8">
                    <div class="panel-title">Add Property
                      <input type="submit" class="btn btn-success pull-right" value="Submit Property" style="margin:-4px"/>
@@ -25,9 +25,9 @@ if(isset($id)){
 
                           <b>Product Name:</b>
                         <select class="form-control" name="pro_id">
-                              @foreach($Products as $product)
+                              <!-- @foreach($Products as $product) -->
                           <option  value="{{$product->id}}">{{$product->pro_name}}</<option>
-                              @endforeach
+                              <!-- @endforeach -->
                           </select><br>
 
                          Size:  <select class="form-control" name="size">
@@ -50,7 +50,7 @@ if(isset($id)){
 
                   </div>
 
-                    {!! Form::close() !!}
+                    <!-- {!! Form::close() !!} -->
                 </div>
 
 
