--- a/app/views/share/_admin.sidebar.html.erb
+++ b/app/views/share/_admin.sidebar.html.erb
@@ -1,36 +1,36 @@
-<?php /*
+ <!--<?php /*
 <div class="col-md-2">
            <div class="sidebar content-box" style="display: block;">
                <ul class="nav">
-                   <!-- Main menu -->
+                    Main menu -->
 
-                   <li class="submenu">
+                   <!-- <li class="submenu">
                        <a href="#">
                            <i class="glyphicon glyphicon-list"></i> Products
                            <span class="caret pull-right"></span>
-                       </a>
+                       </a> -->
                        <!-- Sub menu -->
-                       <ul>
+                       <!-- <ul>
                            <li><a href="{{url('/admin/addProduct')}}">Add Products</a></li>
                            <li><a href="{{url('/admin/products')}}">View Products</a></li>
-                       </ul>
-                   </li>
+                       </ul> 
+                   </li>-->
 
-                     <li class="submenu">
+                     <!-- <li class="submenu">
                        <a href="#">
                            <i class="glyphicon glyphicon-list"></i> Categories
                            <span class="caret pull-right"></span>
                        </a>
                        <!-- Sub menu -->
-                       <ul>
+                       <!-- <ul>
                            <li><a href="{{url('/admin/addCat')}}">Add Category</a></li>
                            <li><a href="{{url('/admin/categories')}}">View Categories</a></li>
                        </ul>
-                   </li>
+                   </li> 
                </ul>
            </div>
-       </div>
-       */?>
+       </div>--> 
+       
         <aside>
             <div id="sidebar"  class="nav-collapse ">
                 <!-- sidebar menu start-->
