--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2720,3 +2720,39 @@ a.jp-disabled:hover {
 .search_items {
     overflow: hidden;
 }
+
+/*************************
+**** User_Profile CSS ****
+**************************/
+
+.user-info>form>input,  .user-info>form>select, .col-two>form>input, .col-two>form>select {
+    background: #F0F0E9;
+    border: 0 none;
+    padding: 10px;
+    width: 80%;
+    font-weight: 300;
+    font-size:13px;
+}
+   .user-info>form>label, .col-two>form>label , .col-three>form>label{
+    border: 0 none;
+    margin-top: 8px;
+    padding: 8px;
+    width: 100%;
+    font-weight: 300;
+    font-size: 15px;
+}
+
+.col-two{
+      float: left;
+}
+   
+.col-three>form>input
+{
+    background: #F0F0E9;
+    border: 0 none;
+    font-size: 12px;
+    height: 235px;
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 15px 20px;
+}
