--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,7 +1,7 @@
 <h1><p>Edit Category</p></h1>
 <table class="table-borderless" style="height:200px; width: 400px">
 
-    <%= simple_form_for(@category,:url => admin_category_path,:mothod => :PUT,
+    <%= simple_form_for(@category,:method => :PATCH,:url => admin_category_path,
                                     html: {class: 'form-horizontal'},:defaults => {:input_html => {:class => 'form-control'}}) do|f|%>
 
     <tr>
