--- a/app/views/admin/profile/show.html.erb
+++ b/app/views/admin/profile/show.html.erb
@@ -1,2 +1,26 @@
-<h1>Admin::Profile#show</h1>
-<p>Find me in app/views/admin/profile/show.html.erb</p>
+<div class='row'>
+    <h1 class='text-center'>Admin Profile Page</h1>
+</div>
+
+<div id='container'>
+    <div class= 'col-sm-3'>
+        <div>
+            <img src='/assets/admin_imgs/profiledefaultmale.png'>
+        </div>
+
+        <div>
+            <ul>
+                <li>
+                    <a href="dummy.html">Upload Picture</a>
+                </li>
+                <li>
+                    <a href="dummy.html">Edit Details</a>
+                </li>
+                <li>
+                    <a href="dummy.html">Reset Password</a>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+</div>
