--- a/public/assets/css/bootstrap-theme.css
+++ b/public/assets/css/bootstrap-theme.css
@@ -4610,7 +4610,7 @@ a.list-group-item:focus {
 .panel {
   margin-bottom: 20px;
   background-color: #ffffff;
-  border: 0px solid transparent;  
+  /* border: 0px solid transparent;   */
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
