--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2114,7 +2114,7 @@ div[data-role="editor-toolbar"] {
 
 /*----------------------	panel-----------------*/
 
-.panel {
+/* .panel {
 
   border:none;
 
@@ -2160,13 +2160,13 @@ div[data-role="editor-toolbar"] {
 
   -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.05);
 
-}
+} */
 
-.panel .panel-heading .panel-title {
+/* .panel .panel-heading .panel-title {
 
   line-height: 40px;
 
-}
+} */
 
 .panel .panel-heading i {
 
@@ -2290,7 +2290,7 @@ div[data-role="editor-toolbar"] {
 
   border-width: 1px 1px 2px;
 
-  border-style: solid;
+  /* border-style: solid; */
 
   border-top: none;
 
@@ -2428,7 +2428,7 @@ div[data-role="editor-toolbar"] {
 
 }
 
-.panel.panel-success .panel-heading,
+/* .panel.panel-success .panel-heading,
 
 .panel.panel-success .panel-footer {
 
@@ -2438,9 +2438,9 @@ div[data-role="editor-toolbar"] {
 
   border-color: #79c447;
 
-}
+} */
 
-.panel.panel-info {
+/* .panel.panel-info {
 
   border-color: #67c2ef;
 
@@ -2456,7 +2456,7 @@ div[data-role="editor-toolbar"] {
 
   border-color: #67c2ef;
 
-}
+} */
 
 .panel.panel-warning {
 
@@ -5080,11 +5080,11 @@ ul.ft-link li a i {
 
 
 
-.project-team, .panel-title,.progress-panel{
+/* .project-team, .panel-title,.progress-panel{
 
     background: #F7F7F7;
 
-}
+} */
 
 .profile-ava img{
 
@@ -7430,7 +7430,7 @@ ul.amounts li {
 
 /*panel heading color*/
 
-.panel-heading,.modal-header{
+/* .panel-heading,.modal-header{
 
     background: #F7F7F7;
 
@@ -7454,7 +7454,7 @@ ul.amounts li {
 
     color: #FFFFFF;
 
-}
+} */
 
 
 
@@ -9871,3 +9871,4 @@ span.customSelect.changed {
 }
 
 
+/* cherry's css */
