update add product

--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -86,9 +86,9 @@
                 </div>
             </td>
 
-            <td><a href="{{url('/')}}/ProductEditForm/{{$product->id}}" class="btn btn-success btn-small">Edit</a>
+            <td><a href="/admin/products/59356afab6b75128ec007ff2/edit" class="btn btn-success btn-small">Edit</a>
             </td>
-            <td><a href="{{url('/')}}/deleteProd/{{$product->id}}" class="btn btn-danger btn-small">Delete</a>
+            <td><a href="/admin/products/59356afab6b75128ec007ff2" class="btn btn-danger btn-small">Delete</a>
             </td>
         </tr>
     </tbody>
