--- a/app/views/admin/products/_addProp.html.erb
+++ b/app/views/admin/products/_addProp.html.erb
@@ -1,3 +1,4 @@
+<!--addpro-->
 <div class="content-box-large">
     {!! Form::open(['url' => 'admin/sumbitProperty', 'method' => 'post']) !!}
     <div class="panel-heading col-md-8">
@@ -35,3 +36,4 @@
 
     {!! Form::close() !!}
 </div>
+<!--/addpro-->
