--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,55 +1,89 @@
-<div class="col-md-7">
+
+<!-- <div class="col-md-1">
+</div>  -->
+
+<div class="col-md-6" style="margin-top:25px">
     <div class="content-box-large ">
-        {!! Form::open(['url' => 'editProduct', 'method' => 'post']) !!}
+        <!-- {!! Form::open(['url' => 'editProduct', 'method' => 'post']) !!} -->
         <div class="panel-heading col-md-8">
             <div class="panel-title">Edit Product
-                <input type="submit" class="btn btn-success pull-right" value="Update product" style="margin:-4px" />
+               
             </div>
         </div>
-        <?php $cats=A pp\Categorys::all(); ?> @foreach($Products as $product)
-        <div class="panel-body">
 
+         
+        <!-- <?php $cats=A pp\Categorys::all(); ?> @foreach($Products as $product) -->
+        <div class="panel-body">
             <div class="col-md-8">
                 <br> Category:
                 <select name="cat_id" class="form-control">
-                    @foreach($cats as $cat)
-                    <option value="{{$cat->name}}" <?php if ($product->cat_name == $cat->id) { ?> selected="selected"
-                        <?php } ?>>{{ucwords($cat->name)}}</option>
-                    @endforeach
+                    <!-- @foreach($cats as $cat) -->
+                    <option value="{{$cat->name}}" 
+                       </option>
+                    <!-- @endforeach -->
                 </select>
                 <br/>
-                <input type="hidden" name="id" class="form-control" value="{{$product->id}}"> Name:
-                <input type="text" name="pro_name" class="form-control" value="{{$product->name}}">
-                <br/> Price
-                <input type="text" name="pro_price" class="form-control" value="{{$product->price}}">
+                <input type="hidden" name="id" class="form-control" value=""> Name:
+                <input type="text" name="pro_name" class="form-control" value="">
+                <br/> Price:
+                 <input type="text" name="pro_size" class="form-control" value="">
+                <br/> Size:
+                <input type="text" name="pro_price" class="form-control" value="">
                 <br/> Code:
-                <input type="text" name="pro_code" class="form-control" value="{{$product->code}}">
+                 <input type="text" name="pro_color" class="form-control" value="">
+                <br/> Color:
+                <input type="text" name="pro_code" class="form-control" value="">
                 <br/> Sale price:
-                <input type="text" name="spl_price" class="form-control" value="{{$product->spl_price}}">
+                <input type="text" name="spl_price" class="form-control" value="">
                 <br/> Details:
-                <textarea name="pro_info" class="form-control" rows="2">{{$product->info}}</textarea>
+                <textarea name="pro_info" class="form-control" rows="2"></textarea>
                 <br/> New Arrival:
                 <p class="pull-right">
                     <input type="checkbox" name="new_arrival" value="1" />
                     <input type="hidden" name="_token" value="{{ csrf_token() }}">
-            </div>
-        </div>
 
-        @endforeach {!! Form::close() !!}
+                      <br/><input type="submit" class="btn btn-success pull-right" value="Update product" 
+                style="margin-top:10px" />
+            </div>
+              
+        </div>
+<!-- 
+        @endforeach {!! Form::close() !!} -->
+         
     </div>
+
+   
 </div>
 
-<div class="col-md-4">
-    <?php $pId=$ Products[0]->id; $prots = DB::table('products_properties') ->where('pro_id', $pId)->get(); if(count($prots)==0) { } else {?>
+<div class="col-md-4" style="margin-top:25px; margin-left:-4px">
+    <!-- <?php $pId=$ Products[0]->id; $prots = DB::table('products_properties') ->where('pro_id', $pId)->get(); if(count($prots)==0) { } else {?> -->
+    <div class="panel-heading" style="height:120px">
+        <div class="panel-title" >
+            Update Proprities
+             <!-- <input type="text" name="spl_price" class="form-control" border="none" value=""> -->
+          <a href="" class="btn btn-info pull-right"  style="margin:-6px; color:#fff">Add more</a>
+        </div>
+    
+
+    <div class="col-sm-12" style="margin-top:100px; ">
+    <div class="content-box-medium " align="center">
     <div class="panel-heading">
         <div class="panel-title">
-            Update Proprities
-            <a href="" class="btn btn-info pull-right" style="margin:-6px; color:#fff">Add more</a>
+            Update Product Image
         </div>
     </div>
-</div>
 
-<div class="content-box-large">
+    <img src="{{asset($product->img)}}" alt="" class="img-rounded" width="150px" height="150px" />
+    <br>
+    <br>
+    <p><a href="{{url('/EditImage')}}/{{$product->id}}" class="btn btn-info">Change Image</a>
+    </p>
+  </div></div>
+</div>
+<div class="col-md-2">
+</div>
+</div>
+ <!--<div class="content-box-large">
 
     <table class="table table-responsive">
         <tr>
@@ -58,13 +92,13 @@
             <td>price</td>
             <td>Update</td>
         </tr>
-        @foreach($prots as $prot) {!! Form::open(['url' => '/editProperty', 'method' => 'post']) !!}
+        @foreach($prots as $prot) {!! Form::open(['url' => '/editProperty', 'method' => 'post']) !!} 
         <tr>
             <input type="hidden" name="pro_id" value="{{$prot->pro_id}}" size="6" />
-            <!-- products_properties pro_id -->
+            <!-- products_properties pro_id 
             <input type="hidden" name="id" value="{{$prot->id}}" size="6" />
             <!--// products_properties id -->
-            <td>
+            <!-- <td>
                 <input type="text" name="size" value="{{$prot->size}}" size="6" />
             </td>
             <td>
@@ -77,11 +111,11 @@
                 <input type="submit" class="btn btn-success" value="Save" style="margin:-6px; color:#fff">
             </td>
         </tr>
-        {!! Form::close() !!} @endforeach
+        <!-- {!! Form::close() !!} @endforeach 
 
-    </table>
-</div>
-<?php }?>
+    </table>-->
+<!-- </div> 
+
 
 <hr>
 
@@ -97,4 +131,4 @@
     <br>
     <p><a href="{{url('/EditImage')}}/{{$product->id}}" class="btn btn-info">Change Image</a>
     </p>
-</div>
+</div> -->
