--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,36 +1,78 @@
-<div class="row">
+
+
+<div class="row" style="margin-top:25px">
+
     <div class="col-md-6">
         <div class="content-box-large">
-            {!! Form::open(['url' => '/addProduct', 'method' => 'post', 'enctype' => 'multipart/form-data']) !!}
-            <div class="panel-heading">
-                <div class="panel-title">Add New Product {{--
-                    <input type="submit" value="Submit" class="btn btn-primary pull-right" style="margin:-5px"> --}}
-                    <button type="submit" class="btn btn-primary pull-right" style="margin:-5px">Submit</button>
-                </div>
-            </div>
-            <div class="panel-body">
-                <select class="form-control" name="cat_id">
-                    @foreach($cat_data as $cat) Category:
-                    <option value="{{ $cat->id }}">{{ ucwords($cat->name) }}</option>
-                    @endforeach
-                </select>
-                <br> Name:
-                <input type="text" name="pro_name" class="form-control">
-                <br/> Price
-                <input type="text" name="pro_price" class="form-control">
-                <br/> Code:
-                <input type="text" name="pro_code" class="form-control">
-                <br/> Imgage
-                <input type="file" name="pro_img" class="form-control">
-                <br/> Details:
-                <textarea name="pro_info" class="form-control" rows="5"></textarea>
-                <br/> Spl price
-                <input type="text" name="spl_price" class="form-control">
-                <br/>
-                <input type="hidden" name="_token" value="{{ csrf_token() }}">
+            <%= simple_form_for(@prod,:url => admin_products_path,:method => :POST,
+     html: {class: 'form-horizontal',:mulitipart => true},:defaults => {:input_html => {:class => 'form-control'}}) do|f|%>
 
-            </div>
-            {!! Form::close() !!}
+                <!-- {!! Form::open(['url' => '/addProduct', 'method' => 'post', 'enctype' => 'multipart/form-data']) !!} -->
+                <div class="panel-heading">
+                    <div class="panel-title">Add New Product
+                        <!-- <input type="submit" value="Submit" class="btn btn-primary pull-right" style="margin:-5px"> --}} -->
+
+                    </div>
+                    <div class="panel-body">
+                        <!-- <select class="form-control" name="cat_id">
+                            <!-- @foreach($cat_data as $cat) Category: -->
+
+                            <!-- <option> Women</option>
+                            <option> Men </option> -->
+                            <!-- @endforeach
+                        </select> -->
+
+                          <br/>
+                         <%= f.input :name, :label => 'Product Name' %>
+
+                          <br/>
+                         <%= f.input :brand_name, :label => 'Brand Name:' %>
+
+
+                          <br/>
+                         <%= f.input :cat_name, :label => 'Category' %>
+                        
+                        <br/> 
+                        <%= f.input :model, :label => 'Sub-Category' %>
+
+                         <br/> 
+                        <%= f.input :price, :label => 'Unit Price:' %>
+                        
+                        <br/>
+                         <%= f.input :unit_qTy, :label => 'Unit In Stock:' %>
+
+                         <br/>
+                         <%= f.input :img, as: :file, :label => 'Image:' %>
+                            
+                         <br/>
+                         <%= f.input :history, :label => 'Details:' %>
+                        
+                        
+                        <!-- <br/> Price
+                        <input type="text" name="pro_price" class="form-control">
+                          <br/>
+                         <%= f.input :history, :label => 'Details:' %>
+ <br/>
+                         
+                        <br/> Code:
+                        <input type="text" name="pro_code" class="form-control">
+                        <br/> Imgage
+                        <input type="file" name="pro_img" class="form-control">
+                        <br/> Details:
+                        <textarea name="pro_info" class="form-control" rows="5"></textarea>
+                        <br/> Spl price
+                        <input type="text" name="spl_price" class="form-control">
+                        <br/>
+                        <input type="hidden" name="_token" value="{{ csrf_token() }}">
+
+                        </br> -->
+                     <input type="hidden" name="_token" value="{{ csrf_token() }}">
+                     </br>
+                      <%= f.button :submit, class: 'btn btn-success pull-right'%>
+                        <!-- <button type="submit" class="btn btn-primary pull-right" style="margin:5px">Submit</button> -->
+                    </div>
+                </div>
+                <!-- {!! Form::close() !!} -->
 
         </div>
     </div>
@@ -39,14 +81,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="content-box-header">
-                    <div class="panel-title">Add Properties
-                        <div>
-
-                            <div align="center">
-                                <a href="{{url('admin/addPropertyAll')}}" class="btn btn-sm btn-info">Add Property</a>
-                            </div>
-
-                        </div>
+                    <div class="panel-title" style="font-style:italic;padding:10px">Add Properties
+                        
                         <div class="content-box-large box-with-header">
 
                             Pellentesque luctus quam quis consequat vulputate. Sed sit amet diam ipsum. Praesent in pellentesque diam, sit amet dignissim erat. Aliquam erat volutpat. Aenean laoreet metus leo, laoreet feugiat enim suscipit quis. Praesent mauris mauris, ornare vitae tincidunt sed, hendrerit eget augue. Nam nec vestibulum nisi, eu dignissim nulla.
@@ -58,22 +94,28 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="content-box-header">
-                            <div class="panel-title">New vs Returning Visitors</div>
+                            <!-- <div class="panel-title">New vs Returning Visitors</div> -->
 
                             <div class="panel-options">
                                 <a href="#" data-rel="collapse"><i class="glyphicon glyphicon-refresh"></i></a>
                                 <a href="#" data-rel="reload"><i class="glyphicon glyphicon-cog"></i></a>
                             </div>
                         </div>
-                        <div class="content-box-large box-with-header">
+
+                        <div align="center">
+                            <a href="{{url('admin/addPropertyAll')}}" class="btn btn-sm btn-info" style="size:33px">
+                                    Add Property</a>
+                        </div>
+                        <!-- <div class="content-box-large box-with-header">
 
                             Pellentesque luctus quam quis consequat vulputate. Sed sit amet diam ipsum. Praesent in pellentesque diam, sit amet dignissim erat. Aliquam erat volutpat. Aenean laoreet metus leo, laoreet feugiat enim suscipit quis. Praesent mauris mauris, ornare vitae tincidunt sed, hendrerit eget augue. Nam nec vestibulum nisi, eu dignissim nulla.
                             <br />
                             <br />
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
+      <% end %>
 </div>
